Image overflow bug solved

--- a/css/style_archive.css
+++ b/css/style_archive.css
@@ -990,6 +990,11 @@ ul.timeline li .data .text {
 	position: relative;
 }
 
+.pubthumbnail img{
+	object-fit: contain;
+	height: 100%;
+}
+
 .pitems .pubmain .pubcontent {
 	margin-left: 175px;
 }
